--- a/loginregistro.html
+++ b/loginregistro.html
@@ -1,25 +1,19 @@
-<!DOCTYPE html>
-<html lang="es">
+<!DOCTYPE html> <!-- La Version De HTML Que Es html5-->
+<html lang="es"> <!-- Es El Tags Contenido -->
 
-<head>
+<head> <!-- Todo Lo Que esta Dentro Del HEAD No Aparece En El Navegador 
+             .Aqui Se Agrega El Link Donde Tomaras Todo Lo Externo Por Ejemplo Font , Icon Etc.-->
     <meta charset="UTF-8">
-    <title>Registro</title>
+    <title>Registro</title><!----- Titulo Que Aparece En La Pestaña -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="estilo.css">
-</head>
+</head> <!--Describe tu contenido-->
 
-<body>
+<body>  <!-- Esto Es El Cuerpo Del La Pagina , Aqui Se Muestra Todo -->
     <section id="Login-Registro">
         <h4>Registro</h4>
-       <!---- <p class="parrafo">Entra con:</p>
-        <div class="Redes-Sociales">
-           <button class="google" type="button"><i class="fab fa-google"></i>
-           <span class = "button__G">Google</span></button>
-        <button class="facebook" type="button"><i class="fab fa-facebook"></i>
-        <span class = "button__F">Facebook</span></button>
-       </div> ----->
         <hr/>
          <!----<p class="parrafo">o Ingresa tus datos:</p>----->
         <input class="controls" type="text" name="nombres" id="nombres" placeholder="Ingrese su Nombre">
