--- a/logincuenta.html
+++ b/logincuenta.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="es" dir="ltr">
 
-<head>
-    <meta charset="UTF-8">
-    <title>Login</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilo.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <title>Login</title>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/all.min.css">
+        <link rel="stylesheet" href="estilo.css">
+    </head>
 
 <body>
     <section id="Login-Inicio">
